--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./app.js" defer></script>
 </head>
 <body>
+    <h1 style="text-align: center;">Open Console</h1>
     
 </body>
 </html>
